# jade

./: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  tsconfig.json  update.mjs
crates/jade-vm/: Cargo.toml  OPERANDS.md
crates/jade-vm-wasm/: Cargo.toml
crates/jade-vm-wasm/src/: lib.rs
crates/jade-vm/src/: data.rs  lib.rs  vm.rs
jade-js/: gc.ts  index.ts  package.json  single_tenant.ts
scripts/: regen.mjs  regen.ts
