[workspace]
members=["crates/jade-vm", "crates/jade-vm-wasm"]
resolver="3"

[workspace.package]
license = "MPL-2.0"
description = "JS meta-engine"

[workspace.dependencies]
portal-jsc-common =   {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.9"}
portal-jsc-swc-cfg =  {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.9"}
portal-jsc-swc-tac =  {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.9"}
portal-jsc-swc-ssa =  {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.9"}
portal-jsc-swc-util = {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.9"}

id-arena = "^2.2.1"
arena-traits = {version="^0.2.3",features=["id-arena"]}
ssa-traits = "^0.2.3"
cfg-traits = "^0.2.3"
ssa-impls =  "^0.2.3"
ssa-reloop = "^0.2.3"


swc_atoms = "^9.0.0"
swc_common = "^19.0.0"
swc_ecma_ast = "^21.0.0"
swc_ecma_compat_es2015 = "^43.0.0"
swc_ecma_minifier = "^46.0.0"
swc_ecma_transforms_base = "^38.0.0"
swc_ecma_transforms_optimization = "^40.0.0"
swc_ecma_utils = "^27.0.0"
swc_ecma_visit = "^21.0.0"
swc_bundler = "^44.0.0"
swc_ecma_loader = "^19.0.0"
swc_ecma_parser = "^35.0.0"
swc_ecma_codegen = "^24"


portal-solutions-swibb = {version="^0.6.0-alpha.1",git="https://github.com/portal-co/swibb.git"}
portal-solutions-rewd-core={version="^0.1.0",git="https://github.com/portal-co/rewd.git"}
