[package]
name = "portal-solutions-jade-vm"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num_enum = "0.7.4"
wasm-bindgen = "0.2"
js-sys = "0.3"


[features]
std=["alloc", "wasm-bindgen/std", "js-sys/std"]
alloc=[]
gen-blocks=[]